tests/core/error/fts-rank-3.rq
SELECT (fts:rank(?u) AS ?rank) { }
